--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -614,8 +614,8 @@ APACHE:
 	SpawnActorOnDeath@EMP:
 		Actor: APACHE.Husk.EMP
 		RequiresCondition: empdisable && !traped
-	Rearmable:
-		RearmActors: gahpad, nahpad
+	# Rearmable:
+	# 	RearmActors: gahpad, nahpad
 	# WithAmmoPipsDecoration:
 	# 	Position: BottomLeft
 	# 	RequiresSelection: true
