单位信息窗

--- a/mods/ts/chrome.yaml
+++ b/mods/ts/chrome.yaml
@@ -7,6 +7,9 @@
 ^Buttons:
 	Image: buttons.png
 
+^Dialog2:
+	Image: dialog2.png
+
 ^Glyphs:
 	Image: glyphs.png
 	Image2x: glyphs-2x.png
@@ -509,6 +512,32 @@ music:
 # Used for the menu
 dialog:
 	Inherits: ^Dialog
+	Regions:
+		background: 1, 1, 478, 478
+		border-r: 483, 1, 9, 151
+		border-l: 481, 1, 9, 151
+		border-b: 1, 483, 151, 9
+		border-t: 1, 481, 151, 9
+		corner-tl: 393, 481, 21, 21
+		corner-tr: 415, 481, 21, 21
+		corner-bl: 437, 481, 21, 21
+		corner-br: 459, 481, 21, 21
+
+unitinfo-gdi:
+	Inherits: ^Dialog
+	Regions:
+		background: 1, 1, 478, 478
+		border-r: 483, 1, 9, 151
+		border-l: 481, 1, 9, 151
+		border-b: 1, 483, 151, 9
+		border-t: 1, 481, 151, 9
+		corner-tl: 393, 481, 21, 21
+		corner-tr: 415, 481, 21, 21
+		corner-bl: 437, 481, 21, 21
+		corner-br: 459, 481, 21, 21
+
+unitinfo-nod:
+	Inherits: ^Dialog2
 	Regions:
 		background: 1, 1, 478, 478
 		border-r: 483, 1, 9, 151
