--- a/mods/ts/weapons/smallguns.yaml
+++ b/mods/ts/weapons/smallguns.yaml
@@ -209,6 +209,7 @@ CyborgVulcan:
 # gdi vulcan tower
 VulcanTower:
 	Inherits: ^Vulcan
+	ValidTargets: Ground, Water
 	Report: chaingn_a.wav, chaingn_b.wav, chaingn_c.wav, chaingn_d.wav
 	Range: 7c512
 	ReloadDelay: 45
