--- a/mods/ts/rules/gdi-vehicles.yaml
+++ b/mods/ts/rules/gdi-vehicles.yaml
@@ -19,6 +19,7 @@ APC:
 		PauseOnCondition: empdisable || loading || being-captured || carried || traped
 		Locomotor: amphibious
 		CanMoveBackward: true
+		BackwardFacingTolerance: 384
 		TurnSpeed: 40
 	Health:
 		HP: 20000
