--- a/mods/ts/maps/fields-of-green-test/map.yaml
+++ b/mods/ts/maps/fields-of-green-test/map.yaml
@@ -216,12 +216,12 @@ Actors:
 		Location: 84,-1
 		TurretFacing: 128
 		Facing: 240
-		Plug: tower.vulcan
+		Plug: plug.vulcan
 	Actor56: gactwr
 		Owner: GDI
 		Location: 80,-3
 		Facing: 240
-		Plug: tower.vulcan
+		Plug: plug.vulcan
 	Actor57: gawall
 		Owner: GDI
 		Location: 79,-3
@@ -253,7 +253,7 @@ Actors:
 		Owner: GDI
 		Location: 84,-4
 		Facing: 240
-		Plug: tower.rocket
+		Plug: plug.rpg
 	Actor67: gawall
 		Owner: GDI
 		Location: 88,-1
@@ -311,7 +311,7 @@ Actors:
 		Owner: GDI
 		Location: 85,-11
 		Facing: 864
-		Plug: tower.vulcan
+		Plug: plug.vulcan
 	Actor90: gasilo
 		Owner: GDI
 		Location: 79,-10
@@ -328,7 +328,7 @@ Actors:
 		Owner: GDI
 		Location: 81,-11
 		Facing: 864
-		Plug: tower.vulcan
+		Plug: plug.vulcan
 	Actor89: gagate_a
 		Owner: GDI
 		Location: 82,-11
@@ -1582,7 +1582,7 @@ Actors:
 	Actor498: gactwr
 		Owner: GDI
 		Location: 76,-9
-		Plug: tower.sam
+		Plug: plug.missile
 		TurretFacing: 896
 	Actor499: slav
 		Owner: Multi0
