--- a/mods/ts/weapons/smallguns.yaml
+++ b/mods/ts/weapons/smallguns.yaml
@@ -484,100 +484,14 @@ TinyShard:
 		ExplosionPalette: effectdarkgreen
 
 
-
-
-# Vulcan:
-# 	Inherits: ^MG
-# 	Report: chaingn1.aud
-# 	Warhead@1Dam: SpreadDamage
-# 		Damage: 2000
-
-# Vulcan2:
-# 	Inherits: ^MG
-# 	ReloadDelay: 50
-# 	Burst: 3
-# 	Range: 6c0
-# 	Report: tsgun4.aud
-# 	Warhead@1Dam: SpreadDamage
-# 		Damage: 5000
-
-# Vulcan3:
-# 	Inherits: ^MG
-# 	ReloadDelay: 30
-# 	Burst: 3
-# 	Report: cygun1.aud
-# 	Warhead@1Dam: SpreadDamage
-# 		Damage: 1000
-
-# VulcanTower:
-# 	Inherits: ^MG
-# 	ReloadDelay: 26
-# 	Range: 6c0
-# 	Report: chaingn1.aud
-# 	Warhead@1Dam: SpreadDamage
-# 		Damage: 1800
-
-# JumpCannon:
-# 	Inherits: ^MG
-# 	ReloadDelay: 40
-# 	Burst: 2
-# 	Range: 5c0
-# 	Report: jumpjet1.aud
-# 	Warhead@1Dam: SpreadDamage
-# 		Damage: 1500
-
-# AssaultCannon:
-# 	Inherits: ^MG
-# 	ReloadDelay: 50
-# 	Range: 5c0
-# 	Report: tsgun4.aud
-# 	Warhead@1Dam: SpreadDamage
-# 		Damage: 4000
-
-# RaiderCannon:
-# 	Inherits: ^MG
-# 	ReloadDelay: 55
-# 	Range: 4c0
-# 	Report: chaingn1.aud
-# 	Warhead@1Dam: SpreadDamage
-# 		Damage: 4000
-
-# Pistola:
-# 	Inherits: ^MG
-# 	Range: 3c0
-# 	Report: gun18.aud
-# 	Warhead@1Dam: SpreadDamage
-# 		Damage: 200
-# 	Warhead@2Eff: CreateEffect
-# 		Explosions: piff
-# 	Warhead@3EffWater: CreateEffect
-# 		Explosions: water_piff
-
-# Sniper:
-# 	Inherits: ^MG
-# 	ReloadDelay: 60
-# 	Range: 6c768
-# 	Report: silencer.aud
-# 	Warhead@1Dam: SpreadDamage
-# 		Spread: 36
-# 		Damage: 15000
-# 		Versus:
-# 			Wood: 5
-# 			Light: 5
-# 			Heavy: 5
-# 			Concrete: 5
-# 		DamageTypes: Prone100Percent, TriggerProne, BulletDeath
-# 	Warhead@2Eff: CreateEffect
-# 		Explosions: piff
-# 	Warhead@3EffWater: CreateEffect
-# 		Explosions: water_piff
-
-
 DropVulcan:
 	Inherits: ^SA
+	Report: jumpjet1.aud
 	Projectile: Bullet
 		Speed: 2c0
+		ContrailLength: 2
 		ContrailWidthFadeRate: 1
+		Inaccuracy: 990
 
 
 A10Vulcan:
